# Structure_Analyzer

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: architecture.md
examples/: simple_beam.py
pef_analyzer/: __init__.py  __main__.py
pef_analyzer/core/: __init__.py
pef_analyzer/core/domain/: __init__.py  element.py  load.py  node.py  support.py
pef_analyzer/core/solver/: __init__.py  analyzer.py
pef_analyzer/gui/: __init__.py  app.py  main_window.py
pef_analyzer/utils/: __init__.py  math_utils.py  persistence.py
src/pef_analyzer/: __init__.py
src/pef_analyzer/core/: __init__.py  bar.py  load.py  model.py  node.py  solver.py
src/pef_analyzer/gui/: __init__.py  app.py  main_window.py
src/pef_analyzer/gui/resources/: styles.qss
src/pef_analyzer/gui/widgets/: __init__.py  canvas.py  controls.py
src/pef_analyzer/io/: __init__.py  parsers.py  project_io.py
src/pef_analyzer/utils/: __init__.py  helpers.py
src/pef_analyzer/visualization/: __init__.py  colormap.py  renderer.py
structure-analyzer/: pyproject.toml
structure-analyzer/src/pef_analyzer/: __init__.py
structure-analyzer/src/pef_analyzer/core/: model.py  node.py
structure-analyzer/src/pef_analyzer/gui/widgets/: __init__.py
structure-analyzer/src/pef_analyzer/io/: __init__.py
structure-analyzer/tests/: test_io.py
tests/: __init__.py  test_io.py  test_model.py
tests/integration/: __init__.py  test_classic.py  test_structure.py
tests/unit/: test_domain.py  test_solver.py  test_validation.py
