[tool]
name = "structure-analyzer"
version = "0.1.0"
description = "A Python project for analyzing structural forces and constraints."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
    "PyQt6",
    "numpy",
    "matplotlib"
]

[tool.poetry]
name = "structure-analyzer"
version = "0.1.0"
description = "A Python project for analyzing structural forces and constraints."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"